add authentication middle ware for express app
